--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <a-scene inspector="" keyboard-shortcuts="" screenshot="" xr-mode-ui="" device-orientation-permission-ui="" >
+
         <a-sphere  class="collidable" position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow="" material="" geometry="" scale=""></a-sphere>
         <a-sphere class="collidable" position="0 1.25 -8" radius="1.25" color="#EF2D5E" shadow="receive: false" material="" geometry="" scale="2 2 2"></a-sphere>
         <a-sphere class="collidable" position="0 1.25 -11" radius="1.25" color="#EF2D5E" shadow="receive: false" material="" geometry="" scale="2 2 2"></a-sphere>
@@ -25,12 +26,12 @@
 
         <a-plane position="0 -1.12131 -11.77127" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" material="color: #85b695" geometry="" scale="7.26 12.86 1" shadow=""></a-plane>
         <a-sky color="#0f1826" material="" geometry=""></a-sky>
-        
-        <a-entity camera="" look-controls="" wasd-controls="" position="12.821629948508509 1.6 3.523705712391981" rotation="-0.916732472209318 47.44090543683218 0" data-aframe-inspector-original-camera="">
-            <a-entity collider-check="" raycaster="objects: .collidable; showLine: true" line="end: 0 0 -14.762184115826217; color: white"></a-entity>
+
+        <a-entity camera="fov: 150" look-controls="" wasd-controls="acceleration: 120" position="-7.76 1.6 -1.803" rotation="9.855 -45.607 0" data-aframe-inspector-original-camera="">
+            <a-entity collider-check="" raycaster="objects: .collidable; showLine: true" line="end: 0 0 -8.648174285246014; color: white"></a-entity>
         </a-entity>
         <a-entity light="castShadow: true" position="1 7.30695 7.71736"></a-entity>
-       
+
           <a-entity class="collidable" geometry="" position="0 1 -3" shadow="receive: false"  rotation="0 0 0" animation="property: rotation; to: 720 360 1080;easing: easeInOutElastic; loop: true; dur: 5000"></a-entity>
       <div class="a-loader-title" style="display: none;">yesyes</div></a-scene>
 </body>
