--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a-sky color="#0f1826" material="" geometry=""></a-sky>
 
         <a-entity camera="fov: 160" look-controls="" wasd-controls="acceleration: 120" position="-7.76 1.6 -1.803" rotation="9.855 -45.607 0" data-aframe-inspector-original-camera="">
-            <a-entity collider-check="" raycaster="objects: .collidable; showLine: true" line="end: 0 0 -8.648174285246014; color: white"></a-entity>
+            <a-entity collider-check="" raycaster="objects: .collidable; showLine: true" line="end: 0 0 -8.648174285246014; color: white"></a-entity><a-sphere position="0 -0.2 -0.04116" radius="0.1" color="#EF2D5E" shadow="receive: false" material="" geometry=""></a-sphere>
         </a-entity>
         <a-entity light="castShadow: true" position="1 7.30695 7.71736"></a-entity>
 
