--- a/a-frame/index.html
+++ b/a-frame/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v$npm_package_version/dist/aframe-physics-system.min.js"></script>
 </head>
 <body>
     <img src="./resources/crosshair.png" alt="crosshair"
     style="position: absolute;z-index: 9999999; top: calc(50% - 64px); left: calc(50% - 96px); scale: 0.5;">
-    <a-scene inspector="" keyboard-shortcuts="" screenshot="" xr-mode-ui="" device-orientation-permission-ui="" >
-        <a-plane position="0 -1.12131 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" material="color: #85b695" geometry="" scale="7.26 12.86 1" shadow="">
+    <a-scene physics="debug: true" >
+        <a-plane static-body position="0 -1.12131 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" material="color: #85b695" geometry="" scale="7.26 12.86 1" shadow="">
         </a-plane>
         <a-sky color="#0f1826" material="" geometry=""></a-sky>
         
@@ -25,6 +26,7 @@
           animation="property: components.material.material.color; type: color; from: #ffffff; to: #da0033; easing: linear; loop: true; dur: 500; dir: alternate">
 
           </a-entity> -->
+          <a-box dynamic-body position="5 5.5 0" width="1" height="1" depth="1"></a-box>
           <a-box a-entity class="collidable" geometry="" position="0 1 -3" shadow="receive: false" rotation="0 0 0"
           animation="property: rotation; to: 720 360 1080;easing: easeInOutElastic; loop: true; dur: 5000"  
            animation__2="property: components.material.material.color;
@@ -33,10 +35,11 @@
                       dur: 500;
                       dir: alternate;
                       loop: true"
+                      dynamic-body
                       >
 
       <div class="a-loader-title" style="display: none;">yesyes</div></a-scene>
 
-      <script src="scripts.js"></script>
+      <!-- <script src="scripts.js"></script> -->
 </body>
 </html>
